--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
 		"ts-node": "^10.8.0",
 		"typescript": "^4.6.2"
 	},
+	"dependencies": {
+		"tinymce": "^6.1.2"
+	},
 	"repository": {
 		"url": ""
 	}
