--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 	"scripts": {
 		"build all": "gulp",
 		"emit types": "gulp types",
-		"codehawk": "codehawk ts"
+		"codehawk": "codehawk ts",
+		"preinstall": "npx npm-force-resolutions"
+	},
+	"resolutions": {
+		"glob-parent": "^6.0.1"
 	},
 	"browserslist": [
 		"last 3 versions"
@@ -14,17 +18,17 @@
 	"license": "",
 	"private": true,
 	"devDependencies": {
-		"@league-of-foundry-developers/foundry-vtt-types": "^9.255.0",
-		"@tsconfig/node16": "^1.0.2",
+		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+		"@tsconfig/node16": "^1.0.3",
 		"@types/jquery": "^3.5.14",
-		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.15.0",
-		"@typescript-eslint/parser": "^5.15.0",
-		"autoprefixer": "^10.4.7",
-		"codehawk-cli": "^9.0.0",
-		"cssnano": "^5.1.12",
-		"del": "^6.1.0",
-		"eslint": "^8.16",
+		"@types/node": "^18.11.4",
+		"@typescript-eslint/eslint-plugin": "^5.40.1",
+		"@typescript-eslint/parser": "^5.40.1",
+		"autoprefixer": "^10.4.12",
+		"codehawk-cli": "^10.0.1",
+		"cssnano": "^5.1.13",
+		"del": "^7.0.0",
+		"eslint": "^8.26",
 		"eslint-plugin-import": "^2.26",
 		"fancy-log": "^2.0.0",
 		"gulp": "^4.0.2",
@@ -40,23 +44,22 @@
 		"handlebars": "^4.7",
 		"lazypipe": "^1.0.2",
 		"merge2": "^1.4.1",
-		"node-sass": "^7.0.1",
-		"postcss": "^8.4.12",
-		"postcss-font-magician": "^3.0.0",
+		"node-sass": "^7.0.3",
+		"postcss": "^8.4.18",
 		"postcss-scss": "^4.0.5",
 		"prettier": "2.7.1",
-		"sass": "^1.52",
+		"sass": "^1.55",
 		"stylelint": "^14.14.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-prettier-scss": "^0.0.1",
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^5.0.0",
-		"ts-node": "^10.8.0",
-		"typescript": "^4.6.2"
+		"ts-node": "^10.9.1",
+		"typescript": "^4.8.4"
 	},
 	"dependencies": {
-		"tinymce": "^6.1.2"
+		"tinymce": "^6.2.0"
 	},
 	"repository": {
 		"url": ""
