--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
 	"license": "",
 	"private": true,
 	"devDependencies": {
-		"@yaireo/tagify": "^4.17.8",
 		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
 		"@tsconfig/node16": "^1.0.3",
 		"@types/jquery": "^3.5.14",
 		"@types/node": "^18.11.4",
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
+		"@yaireo/tagify": "^4.17.8",
 		"autoprefixer": "^10.4.12",
 		"codehawk-cli": "^10.0.1",
 		"cssnano": "^5.1.13",
@@ -61,6 +61,7 @@
 		"typescript": "^4.8.4"
 	},
 	"dependencies": {
+		"@types/yaireo__tagify": "^4.17.0",
 		"tinymce": "^6.2.0"
 	},
 	"repository": {
