Continuing schema refactor

--- a/template copy.jsonc
+++ b/template copy.jsonc
@@ -122,7 +122,7 @@
 				"prowess": 0,
 				"resolve": 0
 			},
-			"resistance_bonuses": {
+			"resistance_bonus": {
 				"insight": 0,
 				"prowess": 0,
 				"resolve": 0
