--- a/template copy.jsonc
+++ b/template copy.jsonc
@@ -1,168 +1,4 @@
 {
-	"Actor": {
-		"types": [
-			"pc",
-			"npc",
-			"crew",
-			"faction"
-		],
-		"templates": {
-			"default": {
-				"world_name": "",
-				"gm_notes": "",
-				"tags": [],
-				"description": "",
-				"tier": { "value": 0, "max": 8},
-				"subactors": {},
-				"subtitle": ""
-			},
-			"gmChar": {
-				"concept": "",
-				"clocks": {},
-				"district": "",
-				"assets": "",
-				"situation": "",
-				"turf": "",
-				"status": 0
-			},
-			"pcChar": {
-				"experience": {
-					"playbook": { "value": 0, "max": 8 },
-					"clues": []
-				},
-				"coins": { "value": 0, "max": 4 },
-				"advancement": {
-					"general": 0,
-					"ability": 0,
-					"upgrade": 0
-				}
-			},
-			"hold": { "hold": "strong" }
-		},
-		"pc": {
-			"templates": [
-				"default",
-				"pcChar"
-			],
-			"acquaintances_name": "Friends & Rivals",
-			"vice_name": "Vice",
-			"stress": { "name": "Stress", "value": 0, "max": 9 },
-			"trauma": {
-				"name": "Trauma",
-				"max": 4,
-				"active": {},
-				"checked": {}
-			},
-			"healing": { "value": 0, "max": 4 },
-			"stash": { "value": 0, "max": 40 },
-			"experience": {
-				"insight": { "value": 0, "max": 6 },
-				"prowess": { "value": 0, "max": 6 },
-				"resolve": { "value": 0, "max": 6 }
-			},
-			"loadout": {
-				"selected": "",
-				"levels": {
-					"light": 3,
-					"normal": 5,
-					"heavy": 6,
-					"encumbered": 9
-				}
-			},
-			"harm": {
-				"light": {
-					"one": "",
-					"two": "",
-					"effect": "Less Effect"
-				},
-				"medium": {
-					"one": "",
-					"two": "",
-					"effect": "-1d"
-				},
-				"heavy": {
-					"one": "",
-					"effect": "Need Help"
-				}
-			},
-			"armor": {
-				"active": {
-					"light": false,
-					"heavy": false,
-					"special": false
-				},
-				"checked": {
-					"light": false,
-					"heavy": false,
-					"special": false
-				}
-			},
-			"attributes": {
-				"insight": {
-					"hunt": { "value": 0, "max": 2 },
-					"study": { "value": 0, "max": 2 },
-					"survey": { "value": 0, "max": 2 },
-					"tinker": { "value": 0, "max": 2 }
-				},
-				"prowess": {
-					"finesse": { "value": 0, "max": 2 },
-					"prowl": { "value": 0, "max": 2 },
-					"skirmish": { "value": 0, "max": 2 },
-					"wreck": { "value": 0, "max": 2 }
-				},
-				"resolve": {
-					"attune": { "value": 0, "max": 2 },
-					"command": { "value": 0, "max": 2 },
-					"consort": { "value": 0, "max": 2 },
-					"sway": { "value": 0, "max": 2 }
-				}
-			},
-			"resistance_bonus": {
-				"insight": 0,
-				"prowess": 0,
-				"resolve": 0
-			},
-			"resistance_bonus": {
-				"insight": 0,
-				"prowess": 0,
-				"resolve": 0
-			}
-		},
-		"crew": {
-			"templates": ["default", "pcChar", "hold"],
-			"rep": { "value": 0, "max": 12 },
-			"tier": { "value": 0, "max": 4},
-			"deity": "",
-			"heat": { "value": 0, "max": 9 },
-			"wanted": { "value": 0, "max": 4},
-			"hunting_grounds": ""
-		},
-		"npc": {
-			"templates": ["default", "gmChar"],
-			"persona": {
-				"gender": {"isLocked": false, "value": ""},
-				"appearance": {"isLocked": false, "value": ""},
-				"style": {"isLocked": false, "value": ""},
-				"goal": {"isLocked": false, "value": ""},
-				"method": {"isLocked": false, "value": ""},
-				"quirk": {"isLocked": false, "value": ""},
-				"interests": {"isLocked": false, "value": ""},
-				"trait1": {"isLocked": false, "value": ""},
-				"trait2": {"isLocked": false, "value": ""},
-				"trait3": {"isLocked": false, "value": ""}
-			},
-			"secret": {
-				"goal": {"isLocked": false, "value": ""},
-				"method": {"isLocked": false, "value": ""},
-				"trait1": {"isLocked": false, "value": ""},
-				"trait2": {"isLocked": false, "value": ""},
-				"trait3": {"isLocked": false, "value": ""}
-			}
-		},
-		"faction": {
-			"templates": ["default", "gmChar", "hold"]
-		}
-	},
 	"Item": {
 		"types": [
 			"ability",
@@ -191,217 +27,83 @@
 		"templates": {
 			"default": {
 				"world_name": "",
+				"gm_notes": "",
+				"tags": [],
+				"prereqs": {},
 				"rules": "",
-				"rules_notes": "",
-				"tags": []
+        "notes": "",
+        "description": "",
+				"tier": { "value": 0, "max": 4}
 			},
-			"customizable": {
-				"description": ""
-			},
-			"conditional": {
-				"playbooks": [],
-				"num_available": 1,
-				"prereqs": {}
-			},
-			"project": {
-				"clock": {
-					"stage": 1,
-					"value": 0,
-					"min": 0,
-					"max": 8
-				},
-				"stages": []
-			}
-		},
-		"ability": {
-			"templates": ["default", "customizable", "conditional"]
-		},
-		"background": { "templates": ["default", "customizable"] },
-		"crew_ability": { "templates": ["default", "customizable", "conditional"] },
-		"crew_reputation":  { "templates": ["default", "customizable"] },
-		"crew_upgrade": { "templates": ["default", "customizable", "conditional"] },
-		"feature": {
-			"templates": ["default"],
-			"frame_sizes": ["small", "medium", "heavy"]
-		},
-		"heritage": { "templates": ["default", "customizable"] },
-		"item": {
-			"templates": ["default", "customizable", "conditional"],
-			"playbooks": [],
-			"load": 0,
-			"uses": {"value": 0, "max": 1}
-		},
-		"playbook": {
-			"templates": ["default"],
-			"bgImg": "",
-			"tagline": "",
-			"acquaintances_name": "",
-			"friends_name": "",
-			"rivals_name": "",
-			"starting_stats": {},
-			"experience_clues": [],
-			"trauma_conditions": [],
-			"gather_info_questions": [],
-			"suggested_ability": "",
-			"auto_abilities": []
-		},
-		"preferred_op": { "templates": ["default"] },
-		"stricture": { "templates": ["default"] },
-		"vice": {
-			"templates": ["default", "customizable"],
-			"purveyors": {
-				"list": {},
-				"selected": ""
-			}
-		},
-		"ritual": {
-			"templates": ["default", "customizable", "project"],
-			"source": "",
-			"answers": {
-				"a": "",
-				"b": "",
-				"c": ""
-			},
-			"magnitude": 0,
-			"cast_time": "",
-			"action_roll": "",
-			"fortune_roll": false
-		},
-		"design": {
-			"templates": ["default", "customizable", "project"],
-			"creation_type": "",
-			"answers": {
-				"a": "",
-				"c": ""
-			},
-			"min_quality": 0,
-			"drawbacks": []
-		},
+			"district": { "district": "" },
+      "clocks": { "clocks": {} },
+      "buyable": { "price": {} },
+      "limitUses": { "uses_per_score": {"value": 0, "max": 0}},
+      "cohort": {
+        "subtypes": [],
+        "edges": {},
+        "flaws": {},
+        "harm": { "value": 0, "max": 4 }
+      },
+      "answers": { "answers": {"a": "", "b": "", "c": "", "d": ""} }
+    },
+		"ability": { "templates": ["default", "buyable", "limitUses"] },
+		"background": { "templates": ["default"] },
 		"clock_keeper": {
-			"clock_keys": {}
-		},
-		"cohort": {
-			"scale": 0,
-			"quality": 0,
-			"isUpgraded": false,
-			"edges": [],
-			"flaws": [],
-			"harm": "None",
-			"armor": false
-		},
+      "templates": ["default"],
+      "scenes": [],
+      "targetScene": null,
+      "clock_keys": {}
+    },
+		"cohort_gang": { "templates": ["default", "district", "clocks", "cohort"] },
+		"cohort_expert": { "templates": ["default", "district", "clocks", "cohort"] },
+		"crew_ability": { "templates": ["default", "district", "buyable", "limitUses"] },
+		"crew_reputation": { "templates": ["default"] },
 		"crew_playbook": {
-			"description": "",
-			"experience_clues": "",
-			"turfs": {
-				"1": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"2": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"3": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"4": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"5": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"6": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"7": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"8": {
-					"name": "BITD.Lair",
-					"value": 1,
-					"description": "",
-					"connects": []
-				},
-				"9": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"10": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"11": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"12": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"13": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"14": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				},
-				"15": {
-					"name": "",
-					"value": "",
-					"description": "",
-					"connects": []
-				}
-			}
-		},
+      "templates": ["default"],
+      "turfs": {}
+    },
+		"crew_upgrade": { "templates": ["default", "district", "buyable", "limitUses"] },
+		"feature": { "templates": ["default", "buyable", "limitUses"] },
 		"gm_tracker": {
-		},
-		"location": {
-			"byline": "",
-			"description": "",
-			"district": "",
-			"factions": []
-		},
+      "templates": ["default", "clocks"],
+      "phase": ""
+    },
+		"heritage": { "templates": ["default"] },
+		"item": {
+      "templates": ["default", "clocks", "limitUses"],
+      "max_per_score": 1,
+      "load": 1
+    },
+		"playbook": { "templates": ["default"] },
+		"preferred_op": { "templates": ["default", "district"] },
+		"stricture": { "templates": ["default"] },
+		"vice": { "templates": ["default"] },
+		"project": { "templates": ["default", "district", "clocks"] },
+		"ritual": {
+      "templates": ["default", "district", "clocks", "answers"],
+      "source": "",
+      "magnitude": {"value": 0, "max": 10},
+      "cast_time": "",
+      "action_roll": "",
+      "fortune_roll": ""
+    },
+		"design": {
+      "templates": ["default", "district", "clocks", "answers"],
+      "creation_type": "",
+      "min_quality": 0,
+      "drawbacks": {}
+    },
+		"location": { "templates": ["default", "district", "clocks"] },
 		"score": {
-			"tier": 0,
-			"faction": "",
-			"operation": "",
-			"detail": "",
-			"engagementResult": "",
-			"clocks": {},
-			"entanglements": {},
-			"reward": ""
-		}
+      "templates": ["default", "district", "clocks"],
+      "target": "",
+      "operation": "",
+      "detail": "",
+      "engagement_result": "",
+      "entanglements": {},
+      "reward": "",
+      "locations": []
+    }
 	}
 }
