--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=eunomiac
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=eunos-blades
-#sonar.projectVersion=1.0
+sonar.projectVersion=0.1
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
