Updated SonarCloud to scan only TS, SCSS and HBS files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,3 +11,9 @@ sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# Inclusions: SonarCloud & SonarLint will ONLY scan matching files
+sonar.inclusions=**/*.ts,**/*.d.ts,**/*.scss,**/*.hbs
+
+# Exclusions: SonarCloud & SonarLint will not scan matching files:
+#sonar.exclusions=**/*.json,**/*.js,**/*.css,**/*.yaml
