--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,4 @@ sonar.sources=.
 sonar.inclusions=**/*.ts,**/*.d.ts,**/*.scss,**/*.hbs
 
 # Exclusions: SonarCloud & SonarLint will not scan matching files:
-#sonar.exclusions=**/*.json,**/*.js,**/*.css,**/*.yaml
+sonar.exclusions=data-import/**
