--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
 		"@tsconfig/node16": "^1.0.3",
+		"@types/axios": "^0.14.0",
 		"@types/jquery": "^3.5.14",
 		"@types/node": "^18.11.4",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -65,6 +66,7 @@
 	},
 	"dependencies": {
 		"@types/yaireo__tagify": "^4.17.0",
+		"axios": "^1.5.1",
 		"tinymce": "^6.2.0",
 		"yargs": "^17.7.2"
 	},
