--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
 		"codehawk": "codehawk ts",
 		"preinstall": "npx npm-force-resolutions"
 	},
-	"resolutions": {
-		"glob-parent": "^6.0.1"
-	},
 	"browserslist": [
 		"last 3 versions"
 	],
@@ -18,10 +15,10 @@
 	"license": "",
 	"private": true,
 	"devDependencies": {
+		"@es-joy/jsdoccomment": "^0.41.0",
 		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
 		"@tsconfig/node16": "^1.0.3",
-		"@types/axios": "^0.14.0",
-		"@types/jquery": "^3.5.14",
+		"@types/jquery": "^3.5.27",
 		"@types/node": "^18.11.4",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
@@ -34,7 +31,7 @@
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-etc": "^2.0.3",
 		"eslint-plugin-import": "^2.26",
-		"eslint-plugin-jsdoc": "^39.6.2",
+		"eslint-plugin-jsdoc": "^46.9.0",
 		"fancy-log": "^2.0.0",
 		"gulp": "^4.0.2",
 		"gulp-debug": "^4.0.0",
@@ -50,11 +47,10 @@
 		"handlebars": "^4.7",
 		"lazypipe": "^1.0.2",
 		"merge2": "^1.4.1",
-		"node-sass": "^7.0.3",
 		"postcss": "^8.4.18",
 		"postcss-scss": "^4.0.5",
 		"prettier": "2.7.1",
-		"sass": "^1.55",
+		"sass": "^1.69.5",
 		"stylelint": "^14.14.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-prettier-scss": "^0.0.1",
