--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"codehawk-cli": "^10.0.1",
 		"cssnano": "^5.1.13",
 		"del": "^7.0.0",
+		"ember-template-lint": "^5.13.0",
 		"eslint": "^8.26",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-etc": "^2.0.3",
