--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
 	"version": "0.1.0",
 	"description": "An implementation of Kult: Divinity Lost (4th Edition), based on the original Kult 4E Foundry system by Tom LaPorta.",
 	"scripts": {
-		"build all": "gulp",
-		"emit types": "gulp types",
-		"codehawk": "codehawk ts",
 		"preinstall": "npx npm-force-resolutions"
 	},
 	"browserslist": [
@@ -15,53 +12,41 @@
 	"license": "",
 	"private": true,
 	"devDependencies": {
-		"@es-joy/jsdoccomment": "^0.41.0",
 		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
-		"@stylistic/eslint-plugin": "^1.3.1",
-		"@tsconfig/node16": "^1.0.3",
+		"@types/babel__core": "^7.20.5",
 		"@types/jquery": "^3.5.27",
 		"@types/node": "^18.11.4",
-		"@types/prop-types": "^15.7.11",
-		"@typescript-eslint/eslint-plugin": "^5.62.0",
-		"@typescript-eslint/parser": "^5.62.0",
+		"@typescript-eslint/eslint-plugin": "^7.0.2",
+		"@typescript-eslint/parser": "^7.0.2",
 		"@yaireo/tagify": "^4.17.8",
-		"autoprefixer": "^10.4.12",
-		"codehawk-cli": "^10.0.1",
-		"cssnano": "^5.1.13",
-		"del": "^7.0.0",
-		"ember-template-lint": "^5.13.0",
-		"eslint": "^8.26",
+		"autoprefixer": "^10.4.17",
+		"clean-webpack-plugin": "^4.0.0",
+		"css-loader": "^6.10.0",
+		"eslint": "^8.57.0",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-etc": "^2.0.3",
 		"eslint-plugin-import": "^2.26",
 		"eslint-plugin-jsdoc": "^46.9.0",
-		"fancy-log": "^2.0.0",
-		"gulp": "^4.0.2",
-		"gulp-debug": "^4.0.0",
-		"gulp-header": "^2.0.9",
-		"gulp-plumber": "^1.2.1",
-		"gulp-postcss": "^9.0.1",
-		"gulp-rename": "^2.0.0",
-		"gulp-replace": "^1.1.3",
-		"gulp-sass": "^5.1.0",
-		"gulp-sourcemaps": "^3.0.0",
-		"gulp-terser": "^2.1.0",
-		"gulp-typescript": "^6.0.0-alpha.1",
 		"handlebars": "^4.7",
-		"lazypipe": "^1.0.2",
-		"merge2": "^1.4.1",
+		"mini-css-extract-plugin": "^2.8.0",
 		"postcss": "^8.4.18",
+		"postcss-loader": "^8.1.0",
 		"postcss-scss": "^4.0.5",
 		"prettier": "2.7.1",
-		"sass": "^1.69.5",
+		"sass-loader": "^14.1.1",
+		"style-loader": "^3.3.4",
 		"stylelint": "^14.14.0",
 		"stylelint-config-prettier": "^9.0.3",
 		"stylelint-config-prettier-scss": "^0.0.1",
 		"stylelint-config-recess-order": "^3.0.0",
 		"stylelint-config-standard": "^29.0.0",
 		"stylelint-config-standard-scss": "^5.0.0",
+		"ts-loader": "^9.5.1",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.3.3"
+		"typescript": "^5.3.3",
+		"webpack": "^5.90.3",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^5.0.2"
 	},
 	"dependencies": {
 		"@types/yaireo__tagify": "^4.17.0",
