--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
 	"name": "eunos-blades",
 	"version": "0.1.0",
 	"description": "An implementation of Kult: Divinity Lost (4th Edition), based on the original Kult 4E Foundry system by Tom LaPorta.",
-	"scripts": {
-		"preinstall": "npx npm-force-resolutions"
-	},
+  "scripts": {
+    "webpack:watch": "webpack --config webpack.dev.js --watch",
+    "foundry:serve": "node 'D:/LTSC Programs/FoundryVTT/Foundry Virtual Tabletop/resources/app/main.js' --world=city-of-knives --dataPath='D:/Users/Ryan/Documents/Projects/.CODING/FoundryVTT/FoundryDevData' --hotReload"
+  },
+  "type": "module",
 	"browserslist": [
 		"last 3 versions"
 	],
@@ -12,49 +14,60 @@
 	"license": "",
 	"private": true,
 	"devDependencies": {
+		"@babel/core": "^7.23.9",
+		"@babel/preset-env": "^7.23.9",
+		"@babel/preset-typescript": "^7.23.3",
 		"@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
 		"@types/babel__core": "^7.20.5",
-		"@types/jquery": "^3.5.27",
-		"@types/node": "^18.11.4",
+		"@types/jquery": "^3.5.29",
+		"@types/node": "^20.11.20",
 		"@typescript-eslint/eslint-plugin": "^7.0.2",
 		"@typescript-eslint/parser": "^7.0.2",
 		"@yaireo/tagify": "^4.17.8",
 		"autoprefixer": "^10.4.17",
+		"babel-loader": "^9.1.3",
 		"clean-webpack-plugin": "^4.0.0",
+		"copy-webpack-plugin": "^12.0.2",
 		"css-loader": "^6.10.0",
+		"css-minimizer-webpack-plugin": "^6.0.0",
 		"eslint": "^8.57.0",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-etc": "^2.0.3",
-		"eslint-plugin-import": "^2.26",
-		"eslint-plugin-jsdoc": "^46.9.0",
-		"handlebars": "^4.7",
+		"eslint-plugin-import": "^2.29.1",
+		"eslint-plugin-jsdoc": "^48.2.0",
+		"fork-ts-checker-webpack-plugin": "^9.0.2",
+		"handlebars": "^4.7.7",
 		"mini-css-extract-plugin": "^2.8.0",
-		"postcss": "^8.4.18",
+		"postcss": "^8.4.35",
 		"postcss-loader": "^8.1.0",
-		"postcss-scss": "^4.0.5",
-		"prettier": "2.7.1",
+		"postcss-scss": "^4.0.9",
+		"prettier": "^3.2.5",
 		"sass-loader": "^14.1.1",
 		"style-loader": "^3.3.4",
-		"stylelint": "^14.14.0",
-		"stylelint-config-prettier": "^9.0.3",
-		"stylelint-config-prettier-scss": "^0.0.1",
-		"stylelint-config-recess-order": "^3.0.0",
-		"stylelint-config-standard": "^29.0.0",
-		"stylelint-config-standard-scss": "^5.0.0",
+		"stylelint": "^16.2.1",
+		"stylelint-config-prettier-scss": "^1.0.0",
+		"stylelint-config-recess-order": "^4.6.0",
+		"stylelint-config-standard": "^36.0.0",
+		"stylelint-config-standard-scss": "^13.0.0",
+		"terser-webpack-plugin": "^5.3.10",
 		"ts-loader": "^9.5.1",
-		"ts-node": "^10.9.1",
 		"typescript": "^5.3.3",
 		"webpack": "^5.90.3",
 		"webpack-cli": "^5.1.4",
-		"webpack-dev-server": "^5.0.2"
+		"webpack-dev-server": "^5.0.2",
+		"webpack-merge": "^5.10.0"
 	},
 	"dependencies": {
 		"@types/yaireo__tagify": "^4.17.0",
 		"axios": "^1.5.1",
 		"form-data": "^4.0.0",
 		"openai": "^4.20.0",
-		"tinymce": "^6.2.0",
+		"tinymce": "^6.7.1",
 		"yargs": "^17.7.2"
+	},
+	"overrides": {
+		"tinymce": "^6.7.1",
+		"socket.io-client": "^4.6.1"
 	},
 	"repository": {
 		"url": ""
