--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
 		"svelte-preprocess": "^5.1.3",
 		"typescript": "^5.3.3",
 		"vite": "^5.1.4",
-		"vite-plugin-checker": "^0.6.4"
+		"vite-plugin-checker": "^0.6.4",
+		"vite-plugin-copy": "^0.1.6"
 	},
 	"dependencies": {
 		"@types/yaireo__tagify": "^4.17.0",
